Improved UI by adding background to the top div of every page

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>Our Aim</h2>
-<p class="lead">Kidneys are essential organs of human body that perform an even important function - filter out waste from our body. <b>But what happens if they get damaged - Chronic Kidney Disease.</b><br/>
+<p class="lead" style="text-align:justify;">Kidneys are essential organs of human body that perform an even important function - filter out waste from our body. <b>But what happens if they get damaged - Chronic Kidney Disease.</b><br/>
 Chronic kidney disease (CKD) means your kidneys are damaged and losing their ability to keep you healthy. In the early stages of the disease, most people do not have symptoms. But as CKD gets worse, wastes can build up in your blood and make you feel sick. You may develop other problems like high blood pressure, anemia, weak bones, poor nutritional health, and nerve damage. Because kidneys are vital to so many of the body’s functions, CKD also increases your risk of having heart and blood vessel disease. While these problems may happen slowly and without symptoms, they can lead to kidney failure, which can appear without warning. Once kidneys fail, dialysis or a kidney transplant is needed to stay alive. This stage of CKD is known as kidney failure, end-stage kidney disease (ESKD), or end-stage renal disease (ESRD).
 It simply decreases their ability to keep you healthy by doing the jobs listed.<br/>
 But if chronic kidney disease is detected early then we can easily save hundreds of thousands of lives worldwide.
@@ -83,7 +83,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 </div>
 <div class="row mb50">
 <div class="col-md-12">
-<p class="lead">Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnose the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
+<p class="lead"  style="text-align:justify;">Therefore, we came up with the idea of creating an AI (Artificial Intelligence) powered system to diagnose the disease, predict its cause and also recommend a solution to reduce the consequences of the disease.</p>
 </div>
 </div>
 
@@ -94,7 +94,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>The Team</h2>
-<p class="lead">Even though there's only one face here yet we say 'we' because it's never a one man army when it comes to innovation. We thank each and every person whose direct or indirect contribution has brought us to where we are today. We use technologies like <a href="https://studio.azureml.net/">Microsoft Azure Machine Learning</a>, <a href="https://zeit.co/">ZEIT Now</a> as well as <a href="https://pages.github.com/">GitHub pages</a>. We thank them for their services.</p></div>
+<p class="lead"  style="text-align:justify;">Even though there's only one face here yet we say 'we' because it's never a one man army when it comes to innovation. We thank each and every person whose direct or indirect contribution has brought us to where we are today. We use technologies like <a href="https://studio.azureml.net/">Microsoft Azure Machine Learning</a>, <a href="https://zeit.co/">ZEIT Now</a> as well as <a href="https://pages.github.com/">GitHub pages</a>. We thank them for their services.</p></div>
 </div>
 <div class="row">
 <div class="col-md-3 col-sm-6 probootstrap-animate">
