--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-10 probootstrap-intro-text">
-<h1 class="probootstrap-animate" style="line-height:unset;">Human + AI = <font style="background:black;color:white">NephronAI</font> is fighting <font style="background:black;color:white;">Chronic Kidney Disease</font></h1>
+<h1 class="probootstrap-animate" style="color:white; text-shadow: 0px 0px 3px white;line-height:unset;"><span style="filter:blur(0.8px)">Human + AI = </span><font style="background:black;color:white">NephronAI</font><span style="filter:blur(0.8px)"> is fighting </span><font style="background:black;color:white;">Chronic Kidney Disease</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>With the power AI, and intelligence of the Human brain we have created a solution to answer World's Medical Crisis- Chronic Kidney Disease.</h2>
 </div><br>
@@ -75,8 +75,9 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>A dream project...</h2>
-<p class="lead">Chronic kidney disease, or CKD, causes more deaths than breast cancer or prostate cancer. It is the under-recognized public health crisis. It affects an estimated 37 million people in the U.S. (15% of the adult population; more than 1 in 7 adults) and approximately 90% of those with CKD don’t even know they have it.  1 in 3 American adults (approximately 80 million people) is at risk for CKD. CKD is more common in women (15%) than men (12%).  CKD is the 9th leading cause of death in the U.S.  In 2016, over 500,000 patients received dialysis treatment, and over 200,000 lived with a kidney transplant. <br/>
-Even though I am a very young member of this planet, a 15 year-old high schooler from India, I decided to figure how AI can help predict, diagnose and treat Chronic Kidney Disease. </p>
+<p class="lead" style="font-weight:300 !important;text-align:justify;color:black">Chronic kidney disease, or CKD, causes more deaths than breast cancer or prostate cancer. It is the under-recognized public health crisis. It affects an estimated 37 million people in the U.S. (15% of the adult population; more than 1 in 7 adults) and approximately 90% of those with CKD don’t even know they have it.  1 in 3 American adults (approximately 80 million people) is at risk for CKD. CKD is more common in women (15%) than men (12%).  CKD is the 9th leading cause of death in the U.S.  In 2016, over 500,000 patients received dialysis treatment, and over 200,000 lived with a kidney transplant. <br/>
+Even though I am a very young member of this planet, a 16 year-old high schooler from India, I decided to figure how AI can help predict, diagnose and treat Chronic Kidney Disease. <br/>
+<h3>NephronAI works in three steps:</h3></p>
 </div>
 </div>
 <div class="row mb70">
@@ -84,7 +85,7 @@ Even though I am a very young member of this planet, a 15 year-old high schooler
 <div class="probootstrap-box">
 <div class="icon text-center"><i class="icon-tools2"></i></div>
 <h3>Predict Disease</h3>
-<p>Using AI Algorithm built on Microsoft's Azure Machine Learning Architecture, our AI systems can predict whether a patient is affected by Chrnoic Kidney Disease or not.</p>
+<p style="text-align:justify;">Using AI Algorithm built on Microsoft's Azure Machine Learning Architecture, our AI systems can predict whether a patient is affected by Chrnoic Kidney Disease or not.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Input simple medical records</span></li>
 <li><i class="icon-radio-checked"></i> <span>Our AI Algorithm processes it</span></li>
@@ -96,7 +97,7 @@ Even though I am a very young member of this planet, a 15 year-old high schooler
 <div class="probootstrap-box">
 <div class="icon text-center"><i class="icon-desktop"></i></div>
 <h3>Predict the Cause</h3>
-<p>If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
+<p style="text-align:justify;">If our AI Algorithm figure out that you are vulnerable and have been affected by Chronic Kidney Disease then we shall investigate the cause also.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
 <li><i class="icon-radio-checked"></i> <span>Provide your disease history </span></li>
@@ -108,7 +109,7 @@ Even though I am a very young member of this planet, a 15 year-old high schooler
 <div class="probootstrap-box">
 <div class="icon text-center"><i class="icon-lightbulb"></i></div>
 <h3>Recovery Strategy</h3>
-<p>Now, that we have told you about your diagnoseis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
+<p style="text-align:justify;">Now, that we have told you about your diagnoseis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
 <ul class="text-left with-icon colored">
 <li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
 <li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
@@ -133,7 +134,7 @@ Even though I am a very young member of this planet, a 15 year-old high schooler
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h2>But wait...</h2>
-<p class="lead"><font style="background-color:black;" color='white'>Here's some additional information for you. We aren't a big team yet, it's just one contributor here- a 15 year old student who aims for the good of mankind - Ayush Anand. Why not <a href="contribute">Contribute or share your feedback</a> with us. We'll be more than glad.</font></p>
+<p class="lead" style="text-align:justify;"><font style="background-color:black;" color='white'>Here's some additional information for you. We aren't a big team yet, it's just one contributor here- a 16 year old student who aims for the good of mankind - Ayush Anand. Why not <a href="contribute">Contribute or share your feedback</a> with us. We'll be more than glad.</font></p>
 </div>
 </div>
 </div>
@@ -159,7 +160,7 @@ Even though I am a very young member of this planet, a 15 year-old high schooler
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p style="text-align:justify;">Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
