--- a/terms.html
+++ b/terms.html
@@ -60,7 +60,7 @@
 <div class="col-md-7 probootstrap-intro-text">
 <h1 class="probootstrap-animate">Terms of Service : <font style="background:black">NephronAI</font></h1>
 <div class="probootstrap-subtitle probootstrap-animate">
-<h3 style="color:white;">We're aren't the same without you! But our Terms of Services are equally flexible as the services we provide, if not more. Using our services directly mean you agree to them.</h3><br>
+<h3 style="color:white;">We're not the same without you! But our Terms of Services are equally flexible as the services we provide, if not more. Using our services directly mean you agree to them.</h3><br>
 </div>
 <button class="toclassify" onclick="javascript:window.location.href='classify'">Try Now</button>
 </div>
@@ -78,12 +78,11 @@
   NephronAI (by NightLight AI)<br>
   <small>Last updated: 22<sup>nd</sup> February 2020</small>
 </h3>
-<p class="lead">
-<h4>Data Privacy.</h4>
-Your privacy is important to us. Please read the <a href=”/privacy”>NightLight AI Privacy Policy</a> (the <b>"Privacy Policy"</b>) as it describes the types of data we collect from you and your devices (<b>"Data"</b>), how we use your Data, and the legal bases we have to process your Data. The Privacy Statement also describes how NephronAI uses your content, which are postings submitted by you to NightLight AI (the <b>“Company”</b>/<b>"us"</b>)  via our Services; and the raw input, files, photos, documents, and digital works that you upload, store, broadcast or share through the Services (<b>"Your Content"</b>). Where the processing is based on consent and to the extent permitted by law, by agreeing to these Terms, you consent to the company’s collection, use and disclosure of Your Content and Data as described in the Privacy Policy. In some cases, we will provide separate notice and request your consent as referenced in the Privacy Policy.
-<h4>Your Content.</h4>
+<h4>Data Privacy.</h4><p class="lead" style="text-align:justify !important;">
+  Your privacy is important to us. Please read the <a href=”/privacy”>NightLight AI Privacy Policy</a> (the <b>"Privacy Policy"</b>) as it describes the types of data we collect from you and your devices (<b>"Data"</b>), how we use your Data, and the legal bases we have to process your Data. The Privacy Statement also describes how NephronAI uses your content, which are postings submitted by you to NightLight AI (the <b>“Company”</b>/<b>"us"</b>)  via our Services; and the raw input, files, photos, documents, and digital works that you upload, store, broadcast or share through the Services (<b>"Your Content"</b>). Where the processing is based on consent and to the extent permitted by law, by agreeing to these Terms, you consent to the company’s collection, use and disclosure of Your Content and Data as described in the Privacy Policy. In some cases, we will provide separate notice and request your consent as referenced in the Privacy Policy.
+<h4>Your Content.</h4><p class="lead" style="text-align:justify !important;">
 Many of our Services allow you to store or share Your Content or receive material from others. We don’t claim ownership of Your Content. Your Content remains Your Content and you are responsible for it. To the extent necessary to provide the Services to you and others, to protect you and the Services, and to improve our products and services, you grant to us a worldwide and royalty-free intellectual property license to use Your Content, for example, to make copies of, retain, transmit, reformat, display, and distribute via communication tools Your Content on the Services. If you publish Your Content in areas of the Service where it is available broadly online without restrictions, Your Content may appear in demonstrations or materials that promote the Service.
-<h4>Code of Coduct.</h4>
+<h4>Code of Coduct.</h4><p class="lead" style="text-align:justify !important;">
 By agreeing to these Terms, you’re understand that, when using the Services, you will follow these rules: 
 <ul>
   <li>Don’t do anything illegal.</li>
@@ -93,21 +92,21 @@ By agreeing to these Terms, you’re understand that, when using the Services, y
   <li>Don’t engage in activity that is harmful to you, the Services or others (e.g., transmitting viruses, stalking, posting terrorist or violent extremist content, communicating hate speech, or advocating violence against others). </li>
   <li>Don’t help others break these rules.</li>
 </ul>
-<h4>Additional Equipment/Data Plans.</h4>
+<h4>Additional Equipment/Data Plans.</h4><p class="lead" style="text-align:justify !important;">
 To use many of the Services, you’ll need an internet connection and/or data/cellular plan. You are responsible for providing all connections, plans, and equipment needed to use the Services and for paying the fees charged by the provider(s) of your connections, plans, and equipment. Those fees are in addition to any fees you pay us for the Services and we will not reimburse you for such fees.
-<h4>Ending your Services.</h4>
+<h4>Ending your Services.</h4><p class="lead" style="text-align:justify !important;">
 If your Services are canceled (whether by you or us), first your right to access the Services stops immediately. Second, we’ll delete Data or Your Content associated with your Service or will otherwise disassociate it from you (unless we are required by law to keep it, return it, or transfer it to you or a third party identified by you). As a result you may no longer be able to access any of the Services (or Your Content that you’ve stored on those Services).
-<h4>Support.</h4>
+<h4>Support.</h4><p class="lead" style="text-align:justify !important;">
 Customer support for some Services is available at <a href="https://ayushanand18.github.io/contact">https://ayushanand18.github.io/contact</a>. Support may not be available for some preview or beta versions of features or Services.
-<h4>Updates to the Services or Software, and Changes to These Terms.</h4>
+<h4>Updates to the Services or Software, and Changes to These Terms.</h4><p class="lead" style="text-align:justify !important;">
 We may change these Terms at any time, and we’ll tell you when we do by posting a notification on the Company’s page. Using the Services after the changes become effective means you agree to the new terms. If you don’t agree to the new terms, you must stop using the Services. Additionally, there may be times when we need to remove or change features or functionality of the Service or stop providing a Service or access to Third-Party Apps and Services altogether. Except to the extent required by applicable law, we have no obligation to provide a replacement of any material, Digital Goods, or applications previously purchased. We may release the Services or their features in a preview or beta version, which may not work correctly or in the same way the final version may work.
-<h4>Payment Terms.</h4>
+<h4>Payment Terms.</h4><p class="lead" style="text-align:justify !important;">
 None of our services require you to provide payment information or any charge(s)/fee(s). Second, we don’t indulge in any of the acts that are transactional in nature. You are recommended to stay beware of fraudulent/fake people, messages, social media campaigns, which claim to be affiliated to the Company and ask for any payment. All our services are available to any individual/organization without payment.
-<h4>Collecting Health-related Information.</h4>
+<h4>Collecting Health-related Information.</h4><p class="lead" style="text-align:justify !important;">
 Our Services are intended for you to share your personal health-related information and information about other people (such as your family) with their consent. You also agree to provide Your Data (including Health-related information) for us to process and recommend the results on an as-is basis. Second, we may store Your Data after removing personally identifiable information, in a secure and encrypted storage location powered by Google&reg; Firestore.
-<h4>Reservation of Rights and Feedback.</h4>
+<h4>Reservation of Rights and Feedback.</h4><p class="lead" style="text-align:justify !important;">
 Except as expressly provided under these Terms, the Company does not grant you a license or any other rights of any type under any patents, know-how, copyrights, trade secrets, trademarks or other intellectual property owned or controlled by the Company or any related entity, including but not limited to any name, trade dress, logo or equivalents. If you give to us any idea, proposal, suggestion or feedback, including without limitation ideas for new products, technologies, promotions, product names, product feedback and product improvements (<b>"Feedback"</b>), you give to the Company, without charge, royalties or other obligation to you, the right to make, have made, create derivative works, use, share and commercialize your Feedback in any way and for any purpose. You will not give Feedback that is subject to a license that requires us to license its software, technologies or documentation to any third party because we include your Feedback in them.
-<h4>Notices and procedure for making claims of intellectual property infringement.</h4>
+<h4>Notices and procedure for making claims of intellectual property infringement.</h4><p class="lead" style="text-align:justify !important;">
 Our Company respects the intellectual property rights of third parties. If you wish to send a notice of intellectual property infringement, including claims of copyright infringement, please write to us at <a href="https://ayushanand18.github.io/contact">https://ayushanand18.github.io/contact</a>. <b>ONLY INQUIRIES RELEVANT TO THIS PROCEDURE WILL RECEIVE A RESPONSE.</b><br>
 <br>
 <b>
